Add link to the specification document

--- a/README
+++ b/README
@@ -1,6 +1,8 @@
 From February 17 to 19 takes place on Android DevCamp Global 2012 throughout the world.
 The PAUG organize the Parisian Android DevCamp on the theme of Open Data.
 
+Project descriptions and specifications :
+https://docs.google.com/document/pub?id=1a84ifUQ-zFDIXw7275jvz0a1hyOu-D_2Wgnlz2OE4SI
 
 Project members :
 
