--- a/android-project/res/values/strings.xml
+++ b/android-project/res/values/strings.xml
@@ -20,5 +20,6 @@
 
   <string name="Home_menu_settings">Settings</string>
   <string name="Home_menu_about">About</string>
+  <string name="Home_report_button">Signaler un incident</string>
 
 </resources>
