--- a/android-project/res/values/strings.xml
+++ b/android-project/res/values/strings.xml
@@ -21,5 +21,7 @@
   <string name="Home_menu_settings">Settings</string>
   <string name="Home_menu_about">About</string>
   <string name="Home_report_button">Signaler un incident</string>
+  <string name="PoiTypeChooser_enable_gps_messages">Le GPS n\'est pas actif sur votre terminal, veuillez l\'activer pour poursuivre.</string>
+  <string name="PoiTypeChooser_enable_gps_valid_button">Activer le GPS</string>
 
 </resources>
