--- a/android-project/res/values/strings.xml
+++ b/android-project/res/values/strings.xml
@@ -23,5 +23,6 @@
   <string name="Home_report_button">Signaler un incident</string>
   <string name="PoiTypeChooser_enable_gps_messages">Le GPS n\'est pas actif sur votre terminal, veuillez l\'activer pour poursuivre.</string>
   <string name="PoiTypeChooser_enable_gps_valid_button">Activer le GPS</string>
+  <string name="PoiTypeChooser_title">Choix du type d\'infrastructure</string>
 
 </resources>
