--- a/android-project/res/values/strings.xml
+++ b/android-project/res/values/strings.xml
@@ -26,5 +26,8 @@
   <string name="PoiTypeChooser_title">Choix du type d\'infrastructure</string>
   <string name="PoiReportsGroup_button_map">Plan</string>
   <string name="PoiReportsGroup_button_list">Liste</string>
+  <string name="Home_mode_agent">Mode Agent</string>
+  <string name="Home_settings">Paramètres</string>
+  <string name="Home_support">Donation</string>
 
 </resources>
