--- a/android-project/res/values/strings.xml
+++ b/android-project/res/values/strings.xml
@@ -32,7 +32,8 @@
   <string name="ConfirmDialog_tcancel">Annuler</string>
   <string name="ConfirmDialog_comment">Commenter...</string>
   <string name="ConfirmDialog_twitter">Twitter</string>
-  <string name="ConfirmDialog_titleReportKind">Twitter</string>
+  <string name="ConfirmDialog_titleReportKind">Type d\'incident</string>
+  <string name="ConfirmDialog_error">Echec de l\'envoie du rapport</string>
   
   <string name="ImagePicker_toast_onlyAttachPhoto">"On ne peut que prendre des photos"</string>
   <string name="ImagePicker_toast_cannotFoundGallery">"Impossible d'atteindre la galery"</string>
