--- a/android-project/res/values/strings.xml
+++ b/android-project/res/values/strings.xml
@@ -48,4 +48,5 @@
     <item>Vole</item>
     <item>Manquant</item>
   </string-array>
+    <string name="CreatePoiReport_title">Déclaration d\'un incident</string>
 </resources>
