--- a/android-project/res/values/strings.xml
+++ b/android-project/res/values/strings.xml
@@ -38,6 +38,8 @@
   <string name="ConfirmDialog_titleReportKind">Type d\'incident</string>
   <string name="ConfirmDialog_error">Echec de l\'envoie du rapport</string>
   
+   <string name="CredentialDialog_comment">Pseudo...</string>
+  
   <string name="ImagePicker_toast_onlyAttachPhoto">"On ne peut que prendre des photos"</string>
   <string name="ImagePicker_toast_cannotFoundGallery">"Impossible d'atteindre la galery"</string>
   
